...
            app:layout_constraintTop_toBottomOf="@+id/tituloLogin"
            app:srcCompat="@drawable/logomarvel" />
    </androidx.cardview.widget.CardView>


    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="275dp"
        android:layout_height="51dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/IntroducirEmail"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoLogin"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="277dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/IntroducirPassword"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLogin"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/botonInicio"
        android:layout_width="267dp"
        android:layout_height="60dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/boton_registro"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/crearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/CrearCuentaLogin"
        android:textColor="#3F51B5"
        android:textSize="17sp"
...
